src/App.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    font-family: "Quicksand", sans-serif;
    font-optical-sizing: auto;
    scroll-behavior: smooth;
    overflow-x: hidden;
  }

